Packages executable fatjar as an artifact (#23)